# conversation-analyzer

./: .conversation-analyzer.yaml.example  .env.example  .github-issues-to-create.md  .gitignore  AGENT_UPDATE_SUGGESTIONS.md  CHANGELOG.md  CLAUDE-MD-IMPROVEMENT-SUGGESTIONS.md  CLAUDE.md  CLAUDE_PROMPT_RECOMMENDATIONS.md  CODE_OF_CONDUCT.md  COMMIT-AND-PR-CRITIQUE.md  COMMIT-FIXES-PROPOSAL.md  COMPREHENSIVE-INSTRUCTIONS-RESPONSE.md  COMPREHENSIVE-QUALITY-ASSESSMENT.md  CONTRIBUTING.md  CREATE-PR-NOW.md  DESIGN.md  FINAL-CRITIQUE-STATS-FIX-SAGA.md  FINAL-VERIFICATION-REPORT.md  FINAL_ASSESSMENT.md  IMPROVEMENT-ANALYSIS-REVISED.md  IMPROVEMENT-ANALYSIS.md  INSTALLATION-CHECKLIST.md  ISSUE-COMPLETABILITY-ANALYSIS.md  LICENSE  OVERVIEW.md  PR-CONTENT.md  PR-CREATION-AND-MERGE-INSTRUCTIONS.md  PR-DESCRIPTION-CONCISE.md  PROJECT-OVERVIEW.md  PROJECT_STATUS.md  README.md  RECOMMENDED-STACK.md  RESEARCH-CONSOLIDATED-SUMMARY.md  RESEARCH-FINDINGS-2024-2025.md  RESEARCH-INDEX.md  RESEARCH-PYTHON-LIBRARIES.md  RESEARCH-SUMMARY.md  RESEARCH-TODO-EXTRACTION-TOOLS.md  RESEARCH.md  (+18 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  test.yml
docs/: INSTALLATION.md  USAGE.md  database-schema.md
examples/: sample_report.json  sample_report.md
examples/conversations/: basic-todo-extraction.md  bug-report.md  feature-discussion.md  implicit-todos.md  mixed-conversation.md
src/conversation_analyzer/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  database.py  models.py
src/conversation_analyzer/extraction/: __init__.py  extractor.py  ollama_client.py  prompts.py
src/conversation_analyzer/intelligence/: __init__.py  deduplicator.py  embeddings.py  linker.py  scorer.py
src/conversation_analyzer/parsers/: __init__.py  base.py  code.py  conversation.py
src/conversation_analyzer/reporting/: __init__.py  json_export.py  markdown.py
src/conversation_analyzer/utils/: __init__.py  file_hash.py  logging.py  path_validation.py  text_chunking.py
tests/: __init__.py  conftest.py  test_cli.py
tests/fixtures/code/: sample_code.py
tests/fixtures/conversations/: sample_complex.md  sample_edge_case_empty.md  sample_simple.md
tests/fixtures/expected_outputs/: sample_complex_expected.json  sample_simple_expected.json
tests/integration/: test_full_pipeline.py
tests/unit/: test_database.py  test_intelligence.py  test_models.py  test_parsers.py
